Fix web interface slash key and align font slider A labels
- Prevent browser quick find on "/" key, focus input instead
- Focus input after successful authentication
- Align A labels with bottom of font slider

--- a/src/web/style.css
+++ b/src/web/style.css
@@ -186,6 +186,8 @@ body {
     font-family: serif;
     line-height: 1;
     user-select: none;
+    align-self: flex-end;
+    margin-bottom: -3px;
 }
 
 .font-slider-label.small {
